--- a/_data/itgm4_sponsors.yml
+++ b/_data/itgm4_sponsors.yml
@@ -76,6 +76,18 @@
   level: Бронзовый партнер
   logo: /itgm/img/a25.png
 
+- title: Peter Service
+  link: www.billing.ru
+  desc: 
+  level: Бронзовый партнер
+  logo: /itgm/img/ps.png
+
+- title: Grid Dynamics
+  link: http://www.griddynamics.com/
+  desc: 
+  level: Бронзовый партнер
+  logo: /itgm/img/gd.png
+
 - title: Новый партнер
   link: mailto:piterunited@gmail.com
   desc: 
