--- a/_data/itgm4_communities.yml
+++ b/_data/itgm4_communities.yml
@@ -242,7 +242,7 @@
       work_place : First Line Software
       theme : Разработка под Xamarin.
     "21:00" :
-      speaker : Иван
+      speaker : Иван Янчарук
       work_place : WaveAccess
       theme : "Обусждение  кроссплатформенной мобильной разработки. Проблемы и решения."
 #    "22:00" :
