--- a/_data/itgm4_infopartners.yml
+++ b/_data/itgm4_infopartners.yml
@@ -43,6 +43,11 @@
   desc: 
   logo: /itgm/img/scrumtrek.png
 
+- title: Haker
+  link: https://xakep.ru/
+  desc: 
+  logo: /itgm/img/haker.png
+
 - title: Новый инфопартнер
   link: mailto:piterunited@gmail.com
   desc: 
