--- a/_data/itgm4_infopartners.yml
+++ b/_data/itgm4_infopartners.yml
@@ -48,6 +48,11 @@
   desc: 
   logo: /itgm/img/haker.png
 
+- title: kl10tch
+  link: http://kl10tch.ru/
+  desc: 
+  logo: /itgm/img/klutch.png
+
 - title: Новый инфопартнер
   link: mailto:piterunited@gmail.com
   desc: 
