--- a/_data/itgm4_sponsors.yml
+++ b/_data/itgm4_sponsors.yml
@@ -58,6 +58,12 @@
   level: Серебряный партнер
   logo: /itgm/img/odesk.png
 
+- title: ScrumTrek
+  link: http://scrumtrek.ru/
+  desc: 
+  level: Серебряный партнер
+  logo: /itgm/img/scrumtrek.png
+
 - title: OSS Prime
   link: http://ossprime.ru/
   desc: 
