--- a/_data/itgm4_communities.yml
+++ b/_data/itgm4_communities.yml
@@ -322,7 +322,7 @@
       work_place :  БалтГаз Групп
       theme : "MODX Start. Что такое MODX, быстрый старт для новичков, good practise."
     "20:00" :
-      speaker :
+      speaker : Михаил Винк
       work_place :  JetBrains
       theme : "MODX frontend. PhpStorm как среда разработки для MODX Revolution."
     "21:00" :
