fix status dins

--- a/_data/itgm5_sponsors.yml
+++ b/_data/itgm5_sponsors.yml
@@ -31,7 +31,7 @@
 - title: DINO Systems
   link: http://www.dins.ru/
   desc: 
-  level: Серебряный партнер
+  level: Золотой партнер
   logo: /itgm/img/dins.png
 
 - title: Петер Сервис
